# curation-persona

./: .firebaserc  .gitignore  CLAUDE.md  Makefile  firestore.indexes.json  firestore.rules
docs/: ADR.md  API_design.md  CLAUDE.md  Design_doc.md  PRD.md  phase1-implementation.md
services/agents/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  mcp_server.py  pyproject.toml
services/agents/collector/: agent_executor.py  main.py  service.py
services/agents/librarian/: agent_executor.py  main.py  scorer.py  service.py
services/agents/researcher/: agent_executor.py  main.py  report_generator.py  service.py
services/agents/scripts/: demo_collector.py  demo_cross_industry.py  demo_researcher_stream.py  dump_firestore.py  e2e_pipeline.py  seed_emulator.py  seed_mcp_test.py  seed_production.py
services/agents/shared/: CLAUDE.md  a2a_client.py  config.py  firestore_client.py  gemini_client.py  models.py  retry.py  scraper.py
services/agents/shared/fetchers/: __init__.py  base.py  newsletter_fetcher.py  registry.py  rss_fetcher.py  website_fetcher.py
services/agents/tests/: conftest.py
services/agents/tests/unit/: test_agent_executors.py  test_agents.py  test_bookmark.py  test_collector_service.py  test_config.py  test_cross_industry.py  test_fetchers.py  test_firestore_articles_collection.py  test_firestore_feedback.py  test_firestore_latest_collection.py  test_firestore_research.py  test_gemini_client.py  test_librarian_service.py  test_models.py  test_report_generator.py  test_researcher_service.py  test_retry.py  test_scorer.py  test_scraper.py
(+39 files in other folders)
